backend function implemented

--- a/static/index.html
+++ b/static/index.html
@@ -9,17 +9,12 @@
     <div class="wrap">
       <div class="intro_bg">
         <div class="header">
-          <div class="searchArea">
-            <form>
-              <input type="search" placeholder="search">
-              <span>검색</span>
-            </form>
-          </div>
           <ul class="nav">
             <li><a href="#">HOME</a></li>
             <li><a href="#ABOUTachor">ABOUT</a></li>
             <li><a href="#SERVICEachor">SERVICE</a></li>
             <li><a href="#CONTACTachor">CONTACT</a></li>
+            <li><a href="#LOGINachor">LOGIN</a></li>
           </ul>
         </div>
         <div class="intro_text">
@@ -117,16 +112,6 @@
               우리는 싱가포르에 명소들을 찾아 다닙니다. <br>
               싱가포르는 생각보다 멋진 나라예요, '정원속의 도시' 라는 슬로건 답게 자연이랑도 잘 어우려져 있죠 <br>
               그런 곳을 아무렇지 않게 달릴 수 있다는 건 참 좋은 일이죠! <br><br>
-              
-              총알오징어는, 사실 어떤 특정한 품종을 가진 게 아니랍니다. <br>
-              우리가 사먹지 말아야 한다는 것이죠. <br>
-              불과 약 5년전만 해도 시장에 가면 냉동오징어 한마리에 천원이면 샀는데, <br>
-              이젠 두마리에 7~8천원씩 하니, 더이상 서민음식이 아니게 된거죠. <br><br>
-              
-              얼마전에는 가격을 비교해 보았더니 마른오징어를 기준으로 <br>
-              같은 그람수에 같은 가격이 나올 정도로 천정부지로 오징어값이 치솟았답니다. <br>
-              그런 오징어, 못생겼다고 놀리지 말고 <br>
-              이제 소중하게 대해주어야 하지 않을까요?<br>
               <!--9MLXPMWB-->
           </div>
         </div>
