--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,12 @@
     <div class="wrap">
       <div class="intro_bg">
         <div class="header">
-          <!-- <div class="searchArea">
+          <div class="searchArea">
             <form>
               <input type="search" placeholder="search">
               <span>검색</span>
             </form>
-          </div> -->
+          </div>
           <ul class="nav">
             <li><a href="#">HOME</a></li>
             <li><a href="#ABOUTachor">ABOUT</a></li>
@@ -52,9 +52,6 @@
             <div>
               <div class="contents1">흘린 땀의 양</div>
               <div class="result">74.4 L</div>
-            <!--How much do we sweat? An average person sweats between 0.8 to 1.4 liters (roughly 27.4 to 47.3 oz.) per hour during exercise. To help you with a visual, the smaller bike water bottles typically hold 0.6 liters (20 oz.) of fluid and the larger bottles hold 0.7 liters (24 oz.) of fluid.
-,,,The average person sweats between 0.8 liters (27 ounces—about the size of a large Slurpee) and 1.4 liters (47 ounces) during an hour of exercise,
--->
             </div>
         </li>
       </ul>
@@ -109,9 +106,9 @@
         <h1>SERVICE</h1>
         <div class="contents1">엄격한 과정으로 더 좋은 코스를 찾아 뛰어다니고 있습니다</div>
         <div class="service">
-          <div class="place_photo">
+          <!-- <div class="place_photo">
             <img src="image/place.jpeg">
-          </div>
+          </div> -->
           <div class="contents2">
               <h2>싱가포르 명소를 달린다.</h2>
               우리는 싱가포르에 명소들을 찾아 다닙니다. <br>
